--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "clsx": "^2.1.1",
     "next": "15.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
